--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,39 @@
-<div class="container">
+<div class="container" style="margin-top: 8%;">
+	<navbar></navbar>
 	<div class="row">
-		<navbar></navbar>
-		<h1>home</h1>
+		<div class="row">
+			<h1 class=" col-md-offset-4 col-md-8">Controle de horas</h1>
+		</div>
+		<div class="row">
+			<div class=" col-md-offset-7 col-md-4" style="font-size: 1em; text-align: right;">Bem vindo Bernardo Schveitzer de Souza!</div>
+			<button style="max-width: 6em;" type="button" class=" col-md-1 btn btn-danger btn-default btn-xs">logout</button>
+		</div>
+		<div class="col-md-offset-1" style="margin-top: 8%;">
+			<div class="form-group row">
+				<label class="col-md-2">Data</label>
+				<label class="col-md-4">01 de Junho de 2016</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Horário de entrada</label>
+				<label class="col-md-4">14:00</label>
+			</div>
+			<div class="form-group row">
+				<row>
+					<label class="col-md-2">Previsão de saída</label>
+					<input class="col-md-1">
+					<button style="margin-left: 1em; max-width: 2em; min-height: 2.2em;" class="btn btn-default btn-warning btn-xs col-md-1" type="button">V</button>
+				</row>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Banco de horas semanal</label>
+				<label class="col-md-4">20:00</label>
+			</div>
+		</div>
+		<div class="col-md-offset-1">
+			<div class="row">
+				<button style="max-width: 6em;" type="button" class=" col-md-1 btn btn-danger btn-default btn-xs">relatorio</button>
+				<img style="width: 15em;" class="col-md-offset-8 col-md-2" src="../../imagens/logo.jpg">
+			</div>
+		</div>
 	</div>
 </div>
