--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -1,16 +1,17 @@
 <div class="container">
     <navbar></navbar>
-    <div class="row" style="border-style: solid; border-color:#e3f2fd;">
+    <div class="row panel panel-primary container">
         <div class="row">
-            <h1 class=" col-md-offset-4 col-md-8">Controle de horas</h1>
+            <h1 class=" col-md-offset-4 col-md-8"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
         </div>
         <div class="row">
-            <div class=" col-md-offset-7 col-md-4" style="font-size: 1em; text-align: right;">Bem vindo Bernardo Schveitzer de Souza!</div>
-            <button style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
+            <div class=" col-md-offset-8 col-md-3" style="font-size: 1em; text-align: right;">Bem vindo Bernardo Schveitzer de Souza!</div>
+            <button ng-click="trocaRota('')" style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
                 <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
             </button>
+            <br>
         </div>
-        <div class="form-group row" style="margin-top: 4%">
+        <div class="form-group row" style="margin-top: 2%">
             <row>
                 <label class="col-md-1 text-right">Usuário</label>
                 <input class="col-md-1">
@@ -43,7 +44,7 @@
     </table>
         <div class="row">
             <label class="col-md-offset-9" style="margin-top: 5%;">Powered by</label>
-            <img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/labtic.jpg">
+            <img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/logobranco.jpg">
         </div>
 
     </div>
