--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,7 +1,7 @@
 <div>
     <div class="col-md-offset-4">
-        <div class="panel-heading ">
-            <h1>Bem vindo ao Device Manager!</h1>
+        <div class="panel-heading">
+            <h1>Bem vindo ao Controle de Horas!</h1>
         </div>
     </div>
     <div class="panel-body">
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-lg btn-warning btn-block" ng-click="logar()">Logar</button>
+                        <button class="btn btn-lg btn-primary btn-block" ng-click="logar()">Logar</button>
                     </div>
                 </form>
             </div>
