resolvido minutos 0 e horario de saida maior que entrada

--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -5,8 +5,8 @@
             <h1 class=" col-md-offset-4 col-md-8"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
         </div>
         <div class="row">
-            <div class=" col-md-offset-8 col-md-3" style="font-size: 1em; text-align: right;">Bem vindo Bernardo Schveitzer de Souza!</div>
-            <button ng-click="trocaRota('')" style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
+            <div class=" col-md-offset-8 col-md-3" style="font-size: 1em; text-align: right;">Bem vindo {{logado.nome}} {{logado.sobrenome}}!</div>
+            <button ng-click="sair()" style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
                 <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
             </button>
             <br>
