Feito a interface de usuarios e adicionar usuario.

--- a/public/partial/navbar.html
+++ b/public/partial/navbar.html
@@ -1,7 +1,7 @@
 <div style="margin-top: 8%">
     <ul class="nav nav-tabs">
         <li role="presentation" class="{{classes.home}}"><a ng-click="navega('home')">Home</a></li>
-        <li role="presentation" class="{{classes.entidades}}"><a ng-click="navega('entidades')">Entidades</a></li>
+        <li role="presentation" class="{{classes.entidades}}"><a ng-click="navega('entidades')">Usuários</a></li>
         <li role="presentation" class="{{classes.relatorio}}"><a ng-click="navega('relatorio')">Relatorio</a></li>
     </ul>
 </div>
