--- a/public/views/entidades.html
+++ b/public/views/entidades.html
@@ -1,68 +1,87 @@
 <div class="container">
 	<navbar></navbar>
-	<div class="row">
-		<table class="table table-hover">
-		    <thead>
-		      	<tr>
-		        	<th class="text-center">Nome</th>
-		        	<th class="text-center">Criar Nova Entidade</th>
-		        	<th class="text-center">Visualizar Entidade</th>
-		      	</tr>
-		    </thead>
-		    <tbody>
-		    	<tr ng-repeat="entidade in entidades">
-		        	<td align="center">
-		        		{{entidade.nome}}
-		        	</td>
-		        	<td align="center">
-		        		<button 
-		        			class="btn btn-info" 
-		        			ng-click="selecionaEntidade(entidade)" 
-		        			data-toggle="modal" 
-		        			data-target="#modalCriaEntidade"
-		        		>
-		        			Criar {{entidade.nome}}
-		        		</button>
-		        	</td>
-		        	<td align="center">
-		        		<button class="btn btn-success">
-		        			Visualizar todos {{entidade.nome}}s
-		        		</button>
-		        	</td>
-		      	</tr>
-		    </tbody>
-		</table>
-
-		<!-- MODAL CRIA ENTIDADE -->
-		<div id="modalCriaEntidade" class="modal fade" role="dialog">
-		  	<div class="modal-dialog">
-
-		    	<!-- Modal content-->
-		    	<div class="modal-content">
-		      		<div class="modal-header">
-		        		<button type="button" class="close" data-dismiss="modal">&times;</button>
-		        		<h4 class="modal-title">Criar Novo/a {{entidadeSelecionado.nome}}</h4>
-		      		</div>
-		     		<div class="modal-body">
-		        		<div ng-repeat="variavel in entidadeSelecionado.modelo">
-		        			<!-- todo adicionar nome varivarel -->
-		        			<label>+({{variavel}})</label>
-		        			<!-- todo adicionar nome variavel no ng-model -->
-		        			<input ng-model="{{entidadeSelecionado.nome}}">
-		        		</div>
-		        		<div>
-		        			<button>
-		        				Criar
-		        			</button>
-		        		</div>
-		      		</div>
-		      		<div class="modal-footer">
-		        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		      		</div>
-		    	</div>
-
-		  	</div>
+	<div class="row panel panel-primary container">
+		<div class="row">
+		<h1 class=" col-md-offset-4 col-md-8"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
 		</div>
-
+		<div class="row">
+		<div class=" col-md-offset-8 col-md-3" style="font-size: 1em; text-align: right;">Bem vindo {{logado.nome}} {{logado.sobrenome}}!</div>
+		<button ng-click="sair()" style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
+			<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+		</button>
+		<br>
+			<div class="row">
+				<div class="col-md-3">
+					<div class="input-group col-md-offset-1">
+						<span class="input-group-addon"><span class='glyphicon glyphicon-search'></span></span>
+						<input type="text" class="form-control" ng-model="empresaFiltro.nome">
+					</div>
+				</div>
+				<div class="col-md-offset-3">
+					<button type="button" class="btn btn-success" data-target="#adicionarUsuario" data-toggle="modal">Adicionar Usuário</button>
+				</div>
+			</div>
+		</div>
+		<div class="panel-body tabelaGerencia">
+			<table class="table table-bordered table-striped">
+				<thead>
+				<tr>
+					<th align="center">Nome</th>
+					<th align="center">E-mail</th>
+					<th align="center">Editar</th>
+					<th align="center">Remover</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td align="center"></td>
+					<td align="center"></td>
+					<td align="center">
+						<button class="btn btn-primary">
+							<span class='glyphicon glyphicon-pencil'></span>
+						</button>
+					</td>
+					<td align="center">
+						<button class="btn btn-danger" data-toggle="modal" data-target="#usuarioRemovido">
+							<span class='glyphicon glyphicon-remove'></span>
+						</button>
+					</td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
+</div>
+<!--MODAL USUARIO REMOVIDO-->
+<div id="usuarioRemovido" class="modal fade" role="dialog">
+	<div class="modal-dialog" >
+		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
+			<div class="modal-header">
+				<h4 class="modal-title text-center">Tem certeza que deseja remover o usuário?</h4>
+			</div>
+			<div class="modal-body text-center">
+				<p><button type="button" class="btn btn-default btn-primary" data-toggle="modal" data-target="#certeza" data-dismiss="modal">Sim</button>
+					<button type="button" class="btn btn-default btn-danger" data-dismiss="modal">Não</button></p>
+			</div>
+		</div>
+	</div>
+</div>
+<!--MODAL CERTEZA-->
+<div id="certeza" class="modal fade" role="dialog">
+	<div class="modal-dialog" >
+		<div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:black;">
+			<div class="modal-body text-center">
+				<p>Usuário removido com sucesso!
+					<button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-dismiss="modal">
+						<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+					</button>
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!--MODAL USUARIO-->
+<div class="modal fade" id="adicionarUsuario" role="dialog">
+	<modaladicionarusuario>
+	</modaladicionarusuario>
 </div>
