--- a/public/views/entidades.html
+++ b/public/views/entidades.html
@@ -50,6 +50,9 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="row">
+			<img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/logobranco.jpg">
+		</div>
 	</div>
 </div>
 <!--MODAL USUARIO REMOVIDO-->
