--- a/public/views/home.html
+++ b/public/views/home.html
@@ -41,7 +41,6 @@
 						<span class="glyphicon glyphicon-ok" aria-hidden="true" ></span>
 					</button>
 				</div>
-
 			</div>
 			<div class="form-group" style="background-color: #e3f2fd;">
 				<div align="left" style="position:absolute">
@@ -52,12 +51,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-offset-1">
+		<div style="margin-left: 1em">
 			<div class="row">
 				<button ng-click="trocaRota('relatorio')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
 					<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
 				</button>
-				<label class="col-md-offset-8" style="margin-right: 1%">Powered by</label>
+				<button style="max-width: 5em;" type="button" data-target="#perfilUsuario" data-toggle="modal" class=" btn btn-success btn-default btn-lg">
+					<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+				</button>
 				<img style="width: 15em;" class="col-md-offset-9 col-md-2" src="../../imagens/logobranco.jpg">
 			</div>
 		</div>
@@ -115,4 +116,9 @@
 			</div>
 		</div>
 	</div>
+</div>
+<!--MODAL PERFIL USUARIO-->
+<div class="modal fade" id="perfilUsuario" role="dialog">
+	<modalperfilusuario>
+	</modalperfilusuario>
 </div>
